--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,94 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@layer base {
+    :root {
+        --background: 52 100% 94%;
+        --foreground: 0 0% 20%;
+        --card: 48 100% 86%;
+        --card-foreground: 0 0% 20%;
+        --popover: 48 100% 86%;
+        --popover-foreground: 0 0% 20%;
+        --primary: 7 64% 56%;
+        --primary-foreground: 0 100% 100%;
+        --secondary: 0 0% 20%;
+        --secondary-foreground: 0 100% 100%;
+        --muted: 48 100% 86%;
+        --muted-foreground: 0 0% 40%;
+        --accent: 7 64% 56%;
+        --accent-foreground: 0 100% 100%;
+        --destructive: 7 64% 56%;
+        --destructive-foreground: 0 100% 100%;
+        --border: 7 64% 56%;
+        --input: 52 100% 94%;
+        --ring: 7 64% 56%;
+        --radius: 0.5rem;
+    }
+
+    .dark {
+        --background: 0 0% 3.9%;
+        --foreground: 0 0% 98%;
+
+        --card: 0 0% 3.9%;
+        --card-foreground: 0 0% 98%;
+
+        --popover: 0 0% 3.9%;
+        --popover-foreground: 0 0% 98%;
+
+        --primary: 0 0% 98%;
+        --primary-foreground: 0 0% 9%;
+
+        --secondary: 0 0% 14.9%;
+        --secondary-foreground: 0 0% 98%;
+
+        --muted: 0 0% 14.9%;
+        --muted-foreground: 0 0% 63.9%;
+
+        --accent: 0 0% 14.9%;
+        --accent-foreground: 0 0% 98%;
+
+        --destructive: 0 62.8% 30.6%;
+        --destructive-foreground: 0 0% 98%;
+
+        --border: 0 0% 14.9%;
+        --input: 0 0% 14.9%;
+        --ring: 0 0% 83.1%;
+    }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+@layer base {
+    * {
+        @apply border-border;
+    }
+    body {
+        @apply bg-background text-foreground;
+    }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+nav .animation {
+    position: absolute;
+    height: 2px;
+    bottom: 0;
+    z-index: 0;
+    background: #f00;
+    border-radius: 8px;
+    transition: all 0.5s ease 0s;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+nav .start-home,
+a:nth-child(1):hover ~ .animation {
+    left: 0;
+    width: 40px;
+}
+
+nav .start-about,
+a:nth-child(2):hover ~ .animation {
+    left: 75px;
+    width: 45px;
+}
+
+nav .start-contact,
+a:nth-child(3):hover ~ .animation {
+    left: 150px;
+    width: 60px;
 }
