--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,6 +68,10 @@
     }
 }
 
+.font-begum-w03-bold {
+    font-family: "Begum W03 Bold";
+}
+
 .text-xxs {
     font-size: 0.5rem;
     line-height: 0.75rem;
